--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "swr": "^2.0.3",
     "tailwindcss": "^3.2.7",
     "typescript": "4.9.5",
-    "unstated-next": "^1.1.0"
+    "unstated-next": "^1.1.0",
+    "wasm-jseval": "^0.1.2"
   },
   "resolutions": {
     "postcss": "^8.4.14"
