--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@arco-design/web-react": "^2.45.0",
     "@dbml/core": "^2.5.1",
     "@digitalocean/do-markdownit": "^1.9.0",
+    "@koale/useworker": "^4.0.2",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@monaco-editor/react": "^4.4.5",
     "@next/font": "13.1.6",
@@ -45,6 +46,7 @@
     "react-hook-speech-to-text": "^0.8.0",
     "react-hotkeys-hook": "^4.3.7",
     "react-i18next": "^12.3.1",
+    "react-json-view": "^1.21.3",
     "react-live-runner": "^1.0.5",
     "reactflow": "^11.5.6",
     "redaxios": "^0.5.1",
@@ -53,8 +55,7 @@
     "swr": "^2.0.3",
     "tailwindcss": "^3.2.7",
     "typescript": "4.9.5",
-    "unstated-next": "^1.1.0",
-    "wasm-jseval": "^0.1.2"
+    "unstated-next": "^1.1.0"
   },
   "resolutions": {
     "postcss": "^8.4.14"
@@ -65,5 +66,10 @@
   },
   "engines": {
     "node": "18"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
